--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -27,7 +27,7 @@
 
 
 .forms .role{
-    font-size: 1.75em;
+    font-size: 1.8em;
     color: inherit;
 }
 
@@ -64,8 +64,8 @@
     height: 7px;
     display: block;
     position: relative;
-    top: 16px;
-    right: 10px;
+    top: 15px;
+    right: 11px;
     border-radius: 15px;
     background-color: black;
 }
